[gd_scene load_steps=6 format=2]

[ext_resource path="res://SCRIPTS/player.gd" type="Script" id=1]
[ext_resource path="res://LETTERS/white_dot.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 11.2287

[sub_resource type="Animation" id=2]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath("player_area/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.07, 0.07 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player_area/Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "life"
tracks/0/type = "value"
tracks/0/path = NodePath("player_area/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="player" type="KinematicBody2D" groups=[
"persistent",
"player",
]]
position = Vector2( 100, 340 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="player_area" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="player_area"]
scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 2 )

[node name="collision" type="CollisionShape2D" parent="player_area"]
shape = SubResource( 1 )

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 2 )
anims/life = SubResource( 3 )

[node name="escape_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="player_area" to="." method="_on_player_area_area_entered"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="timeout" from="escape_timer" to="." method="_on_escape_timer_timeout"]
